--- a/MyWebApp.Api/appsettings.Development.json
+++ b/MyWebApp.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MyWebApp;Trusted_Connection=True;MultipleActiveResultSets=True",
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MyWebApp;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 }
